test_files/s_cproc/macro/test_031/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro/test_031/i.input:1:20: error: "." may not appear in macro parameter list
 #define VA(arg, arg.,..) __VA_ARGS__
                    ^
